--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,20 @@
  *= require_tree .
  *= require_self
  */
+
+$primary-color: #6F1A37;
+
+.navbar-inverse {
+	background-color: $primary-color;
+}
+
+.defesa-icon {
+	width: 210px;
+	margin: auto;
+	float: left;
+}
+
+.welcome {
+	margin-top: 80px;
+}
+
