--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,30 +14,8 @@
 </head>
 <body>
 
-<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation"> <!--navbar-->
-    <div class="container-fluid">
-      <div class="navbar-header anchor" id="#home">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" 
-        data-target=".navbar-collapse">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-       </button>
-      </div>
-        <div class="navbar-collapse collapse" id="scrollspy">
-        	<div class="defesa-icon">
-             <a href="#"><img src="/images/defesa-logo.png" alt="Defesa Logo"></a>
-          </div>
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Where we are</a></li>
-            <li><a href="#">Our Products</a></li>
-            <li><a href="#">Import</a></li>
-          </ul>
-        </div>
-    </div>
-</nav> <!--/navbar-->
+
+<%= render "layouts/header" %>
 
 <div class ="container welcome">
 <h1> Welcome to Monte da Defesa </h1>
