--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -1,3 +1,14 @@
 // Place all the styles related to the products controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+$primary-color: #6F1A37;
+
+.thumbnail {
+	background-color: $primary-color;
+}
+
+p {
+	color: white;
+}
