--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -20,6 +20,7 @@
               <button><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %>
             </button>
           </div>
+        </div>
     </div>
   </div>
 <%= link_to 'New Product', new_product_path %>
