--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -23,6 +23,10 @@
     <%= f.label :image_url %><br>
     <%= f.text_field :image_url %>
   </div>
+  <div class="field">
+    <%= f.label :key %><br>
+    <%= f.text_field :key %><br>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
