--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -9,6 +9,7 @@
   <div class="caption">      
         <p><%= product.name %></p>
         <p><%= product.description %></p>
+        <p><%= product.key %></p>
           <div class="row">
             <div class="col-md-4">
               <button><%= link_to 'Show', product %></button>
