--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -15,5 +15,10 @@
   <%= @product.image_url %>
 </p>
 
+<p>
+  <strong>Product Key:</strong>
+  <%= @product.key %>
+</p>
+
 <%= link_to 'Edit', edit_product_path(@product) %> |
 <%= link_to 'Back', products_path %>
