--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -4,7 +4,7 @@
 <div class="col-md-3">
   <div class="thumbnail">
     <% @products.each do |product| %>
-      <%= product.image_url %>
+      <%= image_tag(product.image_url, class: 'product_image') %>
     <% end %>
   <div class="caption">      
         <p><%= product.name %></p>
