--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -3,10 +3,7 @@
 
 <div class="col-md-3">
   <div class="thumbnail">
-    <% @products.each do |product| %>
-    <% end %>
-    <%= image_tag(product.image_url, class: 'product_image') %>
-
+   <%= image_tag(product.image_url, class: 'product_image', width: 200, height: 100 ) %>
   <div class="caption">      
         <p><%= product.name %></p>
         <p><%= product.description %></p>
@@ -27,7 +24,6 @@
   </div>
  </div>
 
- <br>
-<%= link_to 'New Product', new_product_path %>
+
 
   
