--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -8,4 +8,4 @@
 </div>
 
 
-<p id="new-product"><%= link_to 'New Product', new_product_path %></p>
+<button id="new-product-button"><%= link_to 'New Product', new_product_path %></button>
