--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -12,7 +12,7 @@
 
 <p>
   <strong>Image url:</strong>
-       <%= image_tag(@product.image_url, class: 'product_image') %>
+       <%= image_tag(@product.image_url, width: 200, height: 120, class: 'product_image' ) %>
 </p>
 
 <p>
