made new product page look better

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -36,3 +36,13 @@ p {
 	text-decoration: none;
 }
 
+.field {
+	display: table;
+	margin: 0 auto;
+}
+
+#new-product-title {
+	display: table;
+	margin: 0 auto;
+}
+
