--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -28,6 +28,10 @@
     <%= f.label :key %><br>
     <%= f.text_field :key %><br>
   </div>
+    <div class="field">
+    <%= f.label :price %><br>
+    <%= f.text_field :price %><br>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
