--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -4,10 +4,11 @@
 <div class="col-md-4 col-xs-12">
   <div class="thumbnail">
    <%= image_tag(product.image_url,  width: 200, height: 120, class: 'product_image' ) %>
-  <div class="caption">      
+    <div class="caption">      
         <p><%= product.name %></p>
         <p><%= product.description %></p>
         <p><%= product.key %></p>
+        <p>€<%= product.price %></p>
           <div class="row">
             <div class="col-md-3">
               <button><%= link_to 'Show', product %></button>
