--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -20,5 +20,10 @@
   <%= @product.key %>
 </p>
 
+<p>
+  <strong>Product Price:</strong>
+  <%= @product.price %>
+</p>
+
 <%= link_to 'Edit', edit_product_path(@product) %> |
 <%= link_to 'Back', products_path %>
