created Orders model, indexed to Product Model

--- a/app/views/static_pages/landing_page.html.erb
+++ b/app/views/static_pages/landing_page.html.erb
@@ -1,7 +1,5 @@
 <h2 class="text-center"> Featured Product:</h2>
-<%= @featured_product.name %>
-
-<div class = "container-fluid">
+<div class = "container-fluid featured_product">
 	<div class="thumbnail">
 	   <%= image_tag(@featured_product.image_url,  width: 200, height: 120, class: 'product_image' ) %>
 	    <div class="caption">      
