--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -11,3 +11,11 @@ h1 {
 	color: $primary-color;
 }
 
+.featured_product {
+	margin: 0px 80px 0px;
+}
+
+.featured_product p {
+  text-align: center;	
+}
+
