implemented carousel with three featured products in home page

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -2,7 +2,8 @@
 <div class="container">
   <div class="row">
 
-    <%= render @products %>
+    <!--<%= render @products %> -->
+    <%= render partial: "product", collection: @products %>
 
   </div>
 </div>
