--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,10 +16,11 @@
           </div>
           <ul class="nav navbar-nav navbar-right">
             <li><%= link_to 'About Us', static_pages_about_path %></li>
-            <li><a href="#">Where we are</a></li>
             <li><%= link_to 'Our Products', products_path %></li>
-            <li><a href="#">Import</a></li>
             <li><%= link_to 'Contacts', static_pages_contact_path %></li>
+            <li id="search-box"><%= form_tag("/products", method: "get") do %>
+                <%= text_field_tag :q, nil, size: 17, placeholder: 'Search here...' %>
+                <% end %></li>
           </ul>
         </div>
     </div>
