--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -11,28 +11,25 @@
     </div>
   <% end %>
 
-
+  <br>
+  <br>
   <div class="field">
-   <%= f.label :name %><br>
-    <%= f.text_field :name %>
+    <%= f.text_field :name, placeholder: "Product Name", size: 60 %>
   </div>
   <div class="field">
-    <%= f.label :description %><br>
-    <%= f.text_area :description %>
+    <%= f.text_area :description, placeholder: "Description", size: "60x4" %>
   </div>
   <div class="field">
-    <%= f.label :image_url %><br>
-    <%= f.text_field :image_url %>
+    <%= f.text_field :image_url, placeholder: "Image URL", size: 60 %>
   </div>
   <div class="field">
-    <%= f.label :key %><br>
-    <%= f.text_field :key %><br>
+    <%= f.text_field :key, placeholder: "Product Key", size: 60 %>
   </div>
     <div class="field">
-    <%= f.label :price %><br>
-    <%= f.text_field :price %><br>
+    <%= f.text_field :price, placeholder: "Price", size: 60 %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Create Product", class: "form_button" %>
   </div>
+  
 <% end %>
