--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -10,7 +10,7 @@
 
     <%= flash[:notice] %>
 
-    <%= form_tag("/static_pages/thank_you") do %>
+    <%= form_tag("/static_pages/say_thank_you") do %>
 		<br>
 
 		<div class="form-group contact-form">
