--- a/app/views/user_mailer/say_thank_you.html.erb
+++ b/app/views/user_mailer/say_thank_you.html.erb
@@ -2,6 +2,8 @@
 <p>
 	Dear <%= @name %>
 </p>
-<p>	Thank you .... blah blah blah </p>
+<p>	Thank you for contacting us. We will get back to you as soon as we can. Meanwhile, enjoy our free recipe at this link:  </p>
+
+<p> This is your free recipe: </p>
 <hr/>
 <p> Your message to us was: <%= @message %> </p>
