Fixed Devise Flash Notices

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,10 +16,13 @@
  *= require_products
  *= require_contacts
  *= require_users
+ *= require_devise
+
  */
 
 
 .welcome {
 	margin-top: 80px;
 }
+
 
