--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,21 @@
-<h2>Forgot your password?</h2>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
+<%= devise_error_messages! %>
+<div class="container containerdevise">
+	<h2 class="text-center loginstuff">Forgot your password?</h2>
+	<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+	  <%= devise_error_messages! %>
 
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
+	  <div class="field">
+	    <%= f.email_field :email, autofocus: true, placeholder: true %>
+	  </div>
 
-<%= render "devise/shared/links" %>
+	  <div class="actions text-center">
+	    <%= f.submit "Send me reset password instructions" %>
+	  </div>
+	<% end %>
+
+	<div class="text-center">
+		<%= render "devise/shared/links" %>
+	</div>
+</div>
