--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,32 @@
-<h2>Sign up</h2>
+
+
+<%= devise_error_messages! %>
+<div class="container containerdevise">
+<h2 class="text-center loginstuff">Sign up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
-
   <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+    <%= f.email_field :email, autofocus: true, placeholder: true %>
   </div>
 
-  <div class="field">
-    <%= f.label :password %>
+  <div class="field" id="confirm_pass">
     <% if @validatable %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
+    <% end %>
+    <%= f.password_field :password, autocomplete: "off", placeholder: true %>
+    <br />
+    <p style="color: white"><em>(<%= @minimum_password_length %> characters minimum)</em></p>
   </div>
 
   <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
+    <%= f.password_field :password_confirmation, autocomplete: "off", placeholder:true %>
   </div>
 
-  <div class="actions">
+  <div class="actions text-center">
     <%= f.submit "Sign up" %>
   </div>
 <% end %>
 
+<div class="text-center">
 <%= render "devise/shared/links" %>
+</div>
+</div>
