Fixed CanCan to restrict users

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -25,7 +25,7 @@
   </div>
   <div class="row row-copyright">
     <div id="bottom-logo">
-    <img src="images/defesa-logo.png" alt="Defesa Logotipo">
+    <img src="/images/defesa-logo.png" alt="Defesa Logotipo">
   </div>
   <br>
    <footer class="text-center" id="footer"> &copy; Herdade Monte da Defesa 2015 - All rights reserved </footer>
