--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,8 +19,9 @@
 				<%= render "layouts/header" %>
 			</div>
 
-			<div class="container">
 			<%= render "layouts/messages" %>
+			<div class="container containerbody">
+
 			<%= yield %>
 			</div>
 
