fixed footer, removed local notice/alerts from products

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -6,7 +6,7 @@
     <div class="footerdiv">
       <p id="footer-title">COMPANY</p>
     <ul id="morada">
-      <li> Herdade do Monte da Defesa</li> 
+      <li> Herdade da Defesa de Cima</li> 
       <li>Torre dos Coelheiros</li>
     </ul>
   </div>
@@ -28,7 +28,7 @@
     <img src="/images/defesa-logo.png" alt="Defesa Logotipo">
   </div>
   <br>
-   <footer class="text-center" id="footer"> &copy; Herdade Monte da Defesa 2015 - All rights reserved </footer>
+   <footer class="text-center" id="footer"> &copy; Herdade da Defesa de Cima 2015 - All rights reserved </footer>
   </div>
 </div>
 
