--- a/app/views/products/_new_comment.html.erb
+++ b/app/views/products/_new_comment.html.erb
@@ -1,5 +1,4 @@
 
-
 <% if signed_in? %>
     <h4>Add a review:</h4>
     <%= form_for([@product, @product.comments.build]) do |f| %>
@@ -10,7 +9,7 @@
       <p>
         <div class="rating"></div>
       </p>  
-        <%= f.submit “Submit” %>
+       <%= f.submit "Submit" %>
     <% end %>
 <% end %> 
 
