--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -31,6 +31,7 @@
 <p style="color:white">Average Rating: <div class="rated" data-score="<%= @product.average_rating %>"></div> </p>
 </div>
 
-
+<div class="container-fluid containercomments">
 <%= render "products/new_comment" %>
 <%= render "products/product_reviews" %>
+</div>
