added will_paginate gem and made it work on comments

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -34,4 +34,5 @@
 <div class="container-fluid containercomments">
 <%= render "products/new_comment" %>
 <%= render "products/product_reviews" %>
+<p> <%= will_paginate @comments %></p>
 </div>
