--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 
-$primary-color: #6F1A37;
+$primary-color: #97ac9e;
 
 h1 {
 	font-family: Garamond, sans-serif;
@@ -19,13 +19,7 @@ h1 {
   text-align: center;	
 }
 
-.top-page {
-	margin-top: 100px;
-}
 
-.white-space {
-	height: 600px
-}
 
 /* container-footer */
 
@@ -34,7 +28,6 @@ h1 {
 	padding: 0px 50px 0px;
 	background-color: $primary-color;
 }
-
 
 .row-footer {
 	margin-left: auto;
