--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,9 +3,9 @@
  <head>
   <title>Newapp</title>
 
+	
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
   <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
-
   <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
@@ -14,25 +14,19 @@
  </head>
  <body>
 
-	<div class="maincontainer">
-			<div class="container">
-				<%= render "layouts/header" %>
-			</div>
-
-			<%= render "layouts/messages" %>
-			<div class="container containerbody">
-
-			<%= yield %>
-			</div>
-
-
-
-			<div class="container white-space">
-			</div>
-			<footer>
-				<%= render "layouts/footer" %>
-			</footer>
+	<%= render "layouts/header" %>
+	<%= render "layouts/messages" %>
+	<div class="containerbody">
+	  <%= yield %>
 	</div>
+
+  <div class="container white-space">
+  	<%= render "layouts/productgrid" %>
+	</div>
+
+	<footer>
+		<%= render "layouts/footer" %>
+	</footer>
 
  </body>
 </html>
