--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 
   <div class="top_container">
     <div class="defesa-icon">
-      <%= link_to image_tag('/images/defesa-logo1.png'), root_path %>
+      <%= link_to image_tag('/images/defesa-logo2.png'), root_path %>
     </div>
     <ul id="top_buttons">
     <% if user_signed_in? %>
@@ -37,6 +37,8 @@
             <li> <%= link_to('LOGIN', new_user_session_path, class: "menutext") %></li>
           <% end %>
           </ul>
+          <div id="fixed-logo"><%= link_to image_tag('/images/defesa-logo-fixed.png'), root_path, id:'fixed-menu-logo' %></div>
+
           <div id="search-box"><%= form_tag("/products", method: "get") do %>
                 <%= text_field_tag :q, nil, size: 17, placeholder: 'Search here...' %>
                 <% end %></div>
