--- a/app/views/static_pages/landing_page.html.erb
+++ b/app/views/static_pages/landing_page.html.erb
@@ -1,14 +1,24 @@
 
 
-<div id="carousel-example-generic" class="carousel slide top-page landing-slider" data-ride="carousel">
+<div class="productgrid">
+<div id="carousel-example-generic" class="carousel slide top-page" data-ride="carousel">
   <!-- Indicators -->
   <ol class="carousel-indicators">
     <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
   </ol>
 
   <!-- Wrapper for slides -->
-<div class="carousel-inner" role="listbox">  
-  <div class="item active" id="landing-image">
-    <%= image_tag("beef-white1.jpg", :alt => "beef vegetables") %>
+  <div class="carousel-inner" role="listbox">
+    <% @products.each do |product| %>
+    <div class="item<%= " active" if product == @products.first %>">
+     <%= image_tag(product.image_url, width: 400, height: 200) %>
+      <div class="carousel-caption">
+       <%= product.name %>
+      </div>
+    </div>
+    <% end %>
   </div>
+ </div>
 </div>
