--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -27,7 +27,7 @@
       </div>
         <div class="navbar-collapse collapse" id="scrollspy">
           
-          <ul class="nav navbar-nav navbar-right">
+          <ul class="nav navbar-nav navbar-right" id="startnav">
             <li><%= link_to 'ABOUT US', static_pages_about_path, class: "menutext" %></li>
             <li><%= link_to 'OUR PRODUCTS', products_path, class: "menutext" %></li>
             <li><%= link_to 'CONTACTS', static_pages_contact_path, class: "menutext" %></li>
