fixed static pages view, stopped it rendering top slider with every page

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 
-$primary-color: #6F1A37;
+$primary-color: #97AC9E;
 
 .thumbnail {
 	border: 1px £primary-color;
@@ -57,4 +57,5 @@ $primary-color: #6F1A37;
 .containercomments {
 	text-align: center;
 }
+
 
