--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,11 +1,10 @@
 
-<div class="container">
+<div class="container yield-pages">
   <div class="row">
 
     <%= render partial: "product", collection: @products %>
 
   </div>
-</div>
-
 
 <button id="new-product-button"><%= link_to 'New Product', new_product_path %></button>
+</div>
