--- a/app/views/static_pages/landing_page.html.erb
+++ b/app/views/static_pages/landing_page.html.erb
@@ -1,5 +1,22 @@
 
+  <div class="containerbody">
+   
+<div id="carousel-example-generic" class="carousel slide top-page landing-slider" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+  </ol>
 
+  <!-- Wrapper for slides -->
+<div class="carousel-inner" role="listbox">  
+  <div class="item active" id="landing-image">
+    <%= image_tag("beef-white1.jpg", :alt => "beef vegetables") %>
+  </div>
+</div>
+
+  </div>
+
+<div class="container white-space">
 <div class="productgrid">
 <div id="carousel-example-generic" class="carousel slide top-page" data-ride="carousel">
   <!-- Indicators -->
@@ -21,4 +38,5 @@
     <% end %>
   </div>
  </div>
+</div>
 </div>
