--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,4 +1,4 @@
-
+<div class= "yield-pages">
 <div class="row">
 
  <div class="col-md-4 contact-image">
@@ -34,4 +34,5 @@
   </div>
    
 </div> 
+</div>
 
