--- a/app/assets/stylesheets/layouts.css
+++ b/app/assets/stylesheets/layouts.css
@@ -50,3 +50,17 @@
 	margin-bottom: 100px;
 }
 
+/* container-story */
+.container-story {
+	width: 100%;
+	background-color: #4B4C44;
+}
+
+#product-images {
+	margin-top: 60px;
+	margin-bottom: 60px;
+}
+
+
+/* /container-story */
+
