--- a/app/views/static_pages/landing_page.html.erb
+++ b/app/views/static_pages/landing_page.html.erb
@@ -13,8 +13,20 @@
     <%= image_tag("beef-white1.jpg", :alt => "beef vegetables") %>
   </div>
 </div>
-
   </div>
+
+ <div class="container container-story">
+  <div class="row" id="product-images">
+    <div class="col-sm-12 col-md-4">
+      <a id="single_1" href="/images/AngusRacao1000x500.jpg" title="Pasto">
+  <img src="images/AngusRacao400x200.jpg" alt="" />
+</a>
+
+<%= link_to image_tag("/images/AngusRacao400x200.jpg"), :id => 'single_1' %>
+
+    </div>
+  </div>
+ </div>
 
 <div class="container white-space">
 <div class="productgrid">
