--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -1,6 +1,6 @@
 
 
-$(document).on('ready page:load', function(){
+/*$(document).on('ready page:load', function(){
 		$('.rating').raty( { path: '/assets', scoreName: 'comment[rating]' });
 		$('.rated').raty({ path: '/assets',
 	      readOnly: true,
@@ -8,9 +8,10 @@ $(document).on('ready page:load', function(){
 	      	return $(this).attr('data-score');
 	      }
 	    });
-	});
+	});*/
 
 
 
 $('#new_comment').html("Thank-you for your review!");
 $('.product-reviews').prepend("<%= j render @comment %>");
+displayRatingStars();
