--- a/app/views/products/_product_reviews.html.erb
+++ b/app/views/products/_product_reviews.html.erb
@@ -2,16 +2,7 @@
 
 <div class="product-reviews">
     <% @comments.each do |comment| %>
-        <div class="row">
-            <hr>
-            <p>
-            	<%= comment.user.first_name %>  <small><em><%= "#{time_ago_in_words(comment.created_at)} ago" %></em></small>
-            	<% if signed_in? && current_user.admin? %>
-            	<%= link_to ('<span class="glyphicon glyphicon-remove"></span>').html_safe, product_comment_path(@product, comment), method: :delete, data: { confirm: 'Are you sure?' }, class: 'delete-comment', remote: true %>
-            	<% end %>
-            </p>
-			<div class="rated" data-score="<%= comment.rating %>"></div>
-            <p><%= comment.body %></p>
-        </div>
+        <%= render partial: "comments/comment", locals: {comment: comment} %>
+        
     <% end %>
 </div>
