--- a/app/views/static_pages/landing_page.html.erb
+++ b/app/views/static_pages/landing_page.html.erb
@@ -30,26 +30,52 @@
  </div>
 
 <div class="container white-space">
-<div class="productgrid">
-<div id="carousel-example-generic" class="carousel slide top-page" data-ride="carousel">
-  <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-  </ol>
 
-  <!-- Wrapper for slides -->
-  <div class="carousel-inner" role="listbox">
-    <% @products.each do |product| %>
-    <div class="item<%= " active" if product == @products.first %>">
-     <%= image_tag(product.image_url, width: 400, height: 200) %>
-      <div class="carousel-caption">
-       <%= product.name %>
+<div class="row">
+
+<div class="col-sm-12 col-md-6">
+  <h2 class:"text-center" id="table-title"> Latest Products </h2>
+<table>
+      <tr>
+        <th>Product</th>
+        <th>Price</th>
+        <th>See it</th>
+      </tr>
+      <% @products.each do |product| %>
+      <tr>
+      <td><%= product.name%></td>
+      <td><%= product.price %></td>
+      <td><button><%= link_to 'Show', product %></button></td>
+      </tr>
+      <% end %>
+</table>
+</div>
+
+<div class="col-sm-12 col-md-6">
+    <div class="productgrid">
+    <div id="carousel-example-generic" class="carousel slide top-page" data-ride="carousel">
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+      </ol>
+
+      <!-- Wrapper for slides -->
+      <div class="carousel-inner" role="listbox">
+        <% @products.each do |product| %>
+        <div class="item<%= " active" if product == @products.first %>">
+         <%= image_tag(product.image_url, width: 400, height: 200) %>
+          <div class="carousel-caption">
+           <%= product.name %>
+          </div>
+        </div>
+        <% end %>
       </div>
+
     </div>
-    <% end %>
   </div>
+</div>
  </div>
 </div>
 </div>
