--- a/app/views/static_pages/landing_page.html.erb
+++ b/app/views/static_pages/landing_page.html.erb
@@ -1,7 +1,4 @@
-
-  <div class="containerbody">
-   
-<div id="carousel-example-generic" class="carousel slide top-page landing-slider" data-ride="carousel">
+   <div id="carousel-example-generic" class="carousel slide top-page landing-slider" data-ride="carousel">
   <!-- Indicators -->
   <ol class="carousel-indicators">
     <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
@@ -41,14 +38,21 @@
         <th>Price</th>
         <th>See it</th>
       </tr>
-      <% @products.each do |product| %>
-      <tr>
-      <td><%= product.name%></td>
-      <td><%= product.price %></td>
-      <td><button><%= link_to 'Show', product %></button></td>
-      </tr>
+
+     <% cache cache_key_for_products do %>
+        <% @products.each do |product| %>
+          <% cache product do %>        
+            <tr>
+              <td><%= product.name%></td>
+              <td><%= product.price %></td>
+              <td><button><%= link_to 'Show', product %></button></td>
+            </tr>
+          <% end %>    
+        <% end %>        
       <% end %>
+      
 </table>
+
 </div>
 
 <div class="col-sm-12 col-md-6">
@@ -78,4 +82,4 @@
 </div>
  </div>
 </div>
-</div>
+
