--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,6 +5,11 @@
 <h2 class="text-center loginstuff">Sign up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+
+  <div class="field">
+    <%= f.text_field :first_name, autofocus: true, placeholder: true %>
+  </div>
+  
   <div class="field">
     <%= f.email_field :email, autofocus: true, placeholder: true %>
   </div>
