--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -1,17 +1,11 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
-  </head>
-  <body>
-    <h1>Welcome to monte-defesa.com, <%= @user.name %></h1>
+
+    <h1>Welcome to monte-defesa.com, <%= @name %></h1>
     <p>
       You have successfully signed up to monte-defesa.com,
-      your username is: <%= @user.login %>.<br>
+      your username is: <%= @username %>.<br>
     </p>
     <p>
       To login to the site, just follow this link: <%= @url %>.
     </p>
     <p>Thanks for joining and have a great day!</p>
-  </body>
-</html>
+
