--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,12 +1,12 @@
 <p id="notice"><%= notice %></p>
 
-<div class="container containerdevse">
-  <h3 class="text-center loginstuff" style="color:white"><%= @product.name %><  /h==3>
+<div class="container containerdevise">
+  <h3 class="text-center loginstuff" style="color:white"><%= @product.name %></h3>
 
-= 
-p class="text-center" style="color:white"
+
+<p class="text-center" style="color:white">
   <strong>Description:</strong>
- #<%= @product.description %>
+ <%= @product.description %>
 </p>
 
 <p class="text-center" style="color:white">
